@@ -1,5 +1,5 @@
 /*****************************************************************************
- * Copyright (c) 2014-2019 OpenRCT2 developers
+ * Copyright (c) 2014-2020 OpenRCT2 developers
  *
  * For a complete list of all authors, please refer to contributors.md
  * Interested in contributing? Visit https://github.com/OpenRCT2/OpenRCT2
@@ -136,6 +136,7 @@ struct NetworkConfiguration
     std::string default_password;
     bool stay_connected;
     bool advertise;
+    std::string advertise_address;
     int32_t maxplayers;
     std::string server_name;
     std::string server_description;
